<resources>
    <string name="app_name">Agriculture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="dpnearyou">Discover \nPlace Near \nYou</string>
    <string name="fplaceforyou">Find the best place you \nwant by your location \nor neighborhood</string>
    <string name="splacesily">Search for \nPlace Easily</string>
    <string name="rdytoinvest">Ready to \ninvest in this \nplace</string>
    <string name="getstarted">Get Started</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">Sign Up</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="forgetpassword2">Forget Password </string>
    <string name="register">REGISTER</string>
    <string name="username">UserName</string>
    <string name="cfmpassword">Confirm Password</string>
    <string name="createaccnt">create account</string>
    <string name="myaccount">My Account</string>
    <string name="profile">Profile</string>
    <string name="investmentplan">Investment Plan</string>
    <string name="pplan">Farm Plan</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="budget">Budget</string>
    <string name="earchresut">SEARCH RESULTS</string>
    <string name="open">OPEN</string>
    <string name="invester">Investor</string>
    <string name="equity">Equity</string>
    <string name="daysleft">Days Left</string>
    <string name="roi">ROI</string>
    <string name="overview">Overview</string>
    <string name="documents">Documents</string>
    <string name="investcase">Investment Case</string>
    <string name="farmdetail">Farm Detail</string>
    <string name="buynow">Buy Now</string>
    <string name="forgetdata">Enter the email you use for FarmPartner, and we\'ll help you create a new password.</string>
    <string name="funded">Funded</string>
    <string name="investdatagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac fermentum neque. Praesent imperdiet, est id mattis cursus, urna libero blandit libero, a congue nunc neque eu mauris. Duis et diam in nibh eleifend hendrerit.</string>
    <string name="submit">Submit</string>
    <string name="farm">Farm</string>
    <string name="premiumservice">Premium Services</string>
    <string name="resources">Resources</string>
    <string name="abtus">About Us</string>
    <string name="hiw">How it works</string>
    <string name="events">Events</string>
    <string name="blogs">Blogs</string>
    <string name="knowledgebar">Knowledge Base</string>
    <string name="selltous">Sell to us</string>
    <string name="blog">Blog</string>
    <string name="close">CLOSE</string>
    <string name="readmore"><![CDATA[READ MORE >]]></string>
    <string name="entertheotp">Please check your mail for OTP !</string>
    <string name="otp">Enter OTP</string>
    <string name="pleaseenterpassword">Please enter the Password to reset</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="editprofile">EDIT PROFILE</string>
    <string name="aboutprofile">ABOUT PROFILE</string>
    <string name="fname">First Name</string>
    <string name="update">update</string>
    <string name="phone">Phone No.</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="join">Join</string>
    <string name="eventdetail">Event Detail</string>
    <string name="learnmore">Learn More</string>
    <string name="introduction">Introduction</string>
    <string name="hiworks">How it works</string>
    <string name="farmtypes">Farm Types</string>
    <string name="yraccnt">Your Account</string>
    <string name="regulationandpolicies"><![CDATA[Regulation & \n Policies]]></string>
    <string name="faqandglossary"><![CDATA[FAQ & Glossary]]></string>
    <string name="lastname">Last Name</string>
    <string name="buy_now">Buy Now</string>
    <string name="change_password">Change Password</string>
    <string name="emailnoneditable">Email(Non Edit)</string>
    <string name="howitworks">How It Works</string>
</resources>
