<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="agriculture.com.agriculture.activity.fragment.fragmentresources.FragmentBlogs">

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@color/colorappmain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgHamburger"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="8dp"
        android:background="@drawable/greenround"
        android:padding="8dp"
        android:src="@drawable/ic_action_hamburger"

        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgintroduction"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_18sdp"
        android:src="@drawable/farmtypes"
        app:layout_constraintEnd_toStartOf="@+id/imghowitworks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHamburger" />

    <ImageView
        android:id="@+id/imghowitworks"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgintroduction"
        app:layout_constraintTop_toTopOf="@+id/imgintroduction" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/introduction"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgintroduction"
        app:layout_constraintStart_toStartOf="@+id/imgintroduction"
        app:layout_constraintTop_toBottomOf="@+id/imgintroduction" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hiworks"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imghowitworks"
        app:layout_constraintStart_toStartOf="@+id/imghowitworks"
        app:layout_constraintTop_toBottomOf="@+id/imghowitworks" />

    <ImageView
        android:id="@+id/imgfarmtypes"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="8dp"
        android:src="@drawable/farmtypes"
        app:layout_constraintEnd_toEndOf="@+id/imgintroduction"
        app:layout_constraintStart_toStartOf="@+id/imgintroduction"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <ImageView
        android:id="@+id/imgaccnt"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="8dp"
        android:src="@drawable/farmtypes"
        app:layout_constraintEnd_toEndOf="@+id/imghowitworks"
        app:layout_constraintStart_toStartOf="@+id/imghowitworks"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/farmtypes"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgfarmtypes"
        app:layout_constraintStart_toStartOf="@+id/imgfarmtypes"
        app:layout_constraintTop_toBottomOf="@+id/imgfarmtypes" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/yraccnt"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgaccnt"
        app:layout_constraintStart_toStartOf="@+id/imgaccnt"
        app:layout_constraintTop_toBottomOf="@+id/imgaccnt" />

    <ImageView
        android:id="@+id/imgregulationandpolicies"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="8dp"
        android:src="@drawable/farmtypes"
        app:layout_constraintEnd_toEndOf="@+id/imgfarmtypes"
        app:layout_constraintStart_toStartOf="@+id/imgfarmtypes"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <ImageView
        android:id="@+id/imgfaqandgallery"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="8dp"
        android:src="@drawable/farmtypes"
        app:layout_constraintEnd_toEndOf="@+id/imgaccnt"
        app:layout_constraintStart_toStartOf="@+id/imgaccnt"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/regulationandpolicies"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgregulationandpolicies"
        app:layout_constraintStart_toStartOf="@+id/imgregulationandpolicies"
        app:layout_constraintTop_toBottomOf="@+id/imgregulationandpolicies" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/faqandglossary"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgfaqandgallery"
        app:layout_constraintStart_toStartOf="@+id/imgfaqandgallery"
        app:layout_constraintTop_toBottomOf="@+id/imgfaqandgallery" />


</android.support.constraint.ConstraintLayout>
