<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnormal"
    tools:context="agriculture.com.agriculture.activity.activ.LoginActivity"
    >


    <ImageView
        android:id="@+id/imgcloseforgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_action_close"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_15sdp"
        android:rotation="180"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/forgetpassword2"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout45"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edEmailforgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="parvesh"
            android:fontFamily="serif"
            android:gravity="start"
            android:maxLines="1"
            android:singleLine="true"
            android:text="info@gmail.com"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btForgetPass"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="8dp"
        android:background="@drawable/logindrawable"
        android:elevation="10dp"

        android:fontFamily="monospace"
        android:text="@string/submit"
        android:textColor="@color/colorappmain"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout45" />

    <ImageView
        android:src="@drawable/logoo"
        android:id="@+id/imageButton"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgcloseforgetpassword"

        />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alef"
        android:text="@string/forgetdata"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>
